--- a/index.html
+++ b/index.html
@@ -5,90 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="<script src="https:<script src="https://unpkg.com/@walletconnect/web3-provider@latest/dist/umd/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.umd.min.js"></script>
-    <script>
-        let provider;
-        let signer;
-        let contract;
-
-        const contractAddress = "0x0d7A25d695952E8815f6aE99c210Dee687528679"; // Replace with your contract address
-        const abi = [{"inputs":[{"internalType":"address","name":"_wallet1","type":"address"},{"internalType":"address","name":"_wallet2","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"anonymous":false,"inputs":[{"indexed":true,"internalType":"address","name":"user","type":"address"},{"indexed":false,"internalType":"uint8","name":"plan","type":"uint8"},{"indexed":false,"internalType":"uint256","name":"percent","type":"uint256"},{"indexed":false,"internalType":"uint256","name":"amount","type":"uint256"},{"indexed":false,"internalType":"uint256","name":"profit","type":"uint256"},{"indexed":false,"internalType":"uint256","name":"start","type":"uint256"},{"indexed":false,"internalType":"uint256","name":"finish","type":"uint256"}],"name":"NewDeposit","type":"event"},{"anonymous":false,"inputs":[{"indexed":false,"internalType":"address","name":"user","type":"address"}],"name":"Newbie","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"internalType":"address","name":"referrer","type":"address"},{"indexed":true,"internalType":"address","name":"referral","type":"address"},{"indexed":true,"internalType":"uint256","name":"level","type":"uint256"},{"indexed":false,"internalType":"uint256","name":"amount","type":"uint256"}],"name":"RefBonus","type":"event"},{"anonymous":false,"inputs":[{"indexed":true,"internalType":"address","name":"user","type":"address"},{"indexed":false,"internalType":"uint256","name":"amount","type":"uint256"}],"name":"Withdrawn","type":"event"},{"inputs":[],"name":"INVEST_MIN_AMOUNT","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"PERCENTS_DIVIDER","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint256","name":"","type":"uint256"}],"name":"REFERRAL_PERCENTS","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"TIME_STEP","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"getContractInfo","outputs":[{"internalType":"uint256","name":"","type":"uint256"},{"internalType":"uint256","name":"","type":"uint256"},{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint8","name":"plan","type":"uint8"}],"name":"getPercent","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint256","name":"value","type":"uint256"}],"name":"getPlanByValue","outputs":[{"internalType":"uint8","name":"","type":"uint8"}],"stateMutability":"pure","type":"function"},{"inputs":[{"internalType":"uint8","name":"plan","type":"uint8"}],"name":"getPlanHoldMultiplier","outputs":[{"internalType":"uint8","name":"","type":"uint8"}],"stateMutability":"pure","type":"function"},{"inputs":[{"internalType":"uint8","name":"plan","type":"uint8"}],"name":"getPlanInfo","outputs":[{"internalType":"uint256","name":"time","type":"uint256"},{"internalType":"uint256","name":"percent","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint256","name":"deposit","type":"uint256"}],"name":"getResult","outputs":[{"internalType":"uint8","name":"plan","type":"uint8"},{"internalType":"uint256","name":"percent","type":"uint256"},{"internalType":"uint256","name":"profit","type":"uint256"},{"internalType":"uint256","name":"finish","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserAmountOfDeposits","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserAvailable","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserCheckpoint","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"},{"internalType":"uint256","name":"index","type":"uint256"}],"name":"getUserDepositInfo","outputs":[{"internalType":"uint8","name":"plan","type":"uint8"},{"internalType":"uint256","name":"percent","type":"uint256"},{"internalType":"uint256","name":"amount","type":"uint256"},{"internalType":"uint256","name":"profit","type":"uint256"},{"internalType":"uint256","name":"start","type":"uint256"},{"internalType":"uint256","name":"finish","type":"uint256"},{"internalType":"uint256","name":"holdBonus","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserDividends","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserDownlineCount","outputs":[{"internalType":"uint256[30]","name":"","type":"uint256[30]"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"},{"internalType":"uint8","name":"plan","type":"uint8"}],"name":"getUserPercentRate","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserReferralTotalBonus","outputs":[{"internalType":"uint256[30]","name":"","type":"uint256[30]"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserReferrer","outputs":[{"internalType":"address","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserTotalDeposits","outputs":[{"internalType":"uint256","name":"amount","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserTotalWithdrawn","outputs":[{"internalType":"uint256","name":"amount","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"userAddress","type":"address"}],"name":"getUserWithdrawn","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"referrer","type":"address"}],"name":"invest","outputs":[],"stateMutability":"payable","type":"function"},{"inputs":[],"name":"msgvalue","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"owner","outputs":[{"internalType":"address","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"totalRefBonus","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"totalStaked","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"totalUsers","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"wallet1","outputs":[{"internalType":"address","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"wallet2","outputs":[{"internalType":"address","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"withdraw","outputs":[],"stateMutability":"nonpayable","type":"function"}] // Replace with your contract ABI
-
-        async function connectWallet() {
-            // Create WalletConnect Provider
-            provider = new WalletConnectProvider.default({
-                infuraId: "aa83552f8db8c2d86a9c06a13e113b0e" // Replace with your Infura ID
-            });
-
-            // Enable session (triggers QR Code modal)
-            await provider.enable();
-
-            // Create ethers.js provider and signer
-            const ethersProvider = new ethers.providers.Web3Provider(provider);
-            signer = ethersProvider.getSigner();
-            contract = new ethers.Contract(contractAddress, abi, signer);
-
-            document.getElementById('walletAddress').innerText = await signer.getAddress();
-        }
-
-        async function invest() {
-            const amount = document.getElementById('amount').value;
-            const referrer = document.getElementById('referrer').value;
-
-            if (!amount || amount <= 0) {
-                alert('Please enter a valid amount');
-                return;
-            }
-
-            const tx = await contract.invest(referrer, { value: ethers.utils.parseEther(amount) });
-            await tx.wait();
-            alert('Investment successful!');
-        }
-
-        async function withdraw() {
-            const tx = await contract.withdraw();
-            await tx.wait();
-            alert('Withdrawal successful!');
-        }
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@thirdweb-dev/sdk@latest/dist/thirdweb-sdk.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/thirdweb-react@latest/dist/thirdweb-react.min.js"></script>
 </head>
 <body>
     <header>
         <h1>Daily Polygon</h1>
-        <button onclick="connectWallet()">Connect Wallet</button>
-        <p id="walletAddress"></p>
     </header>
     <main>
+        <button id="connectButton">Connect Wallet</button>
+        <p>Your Address: <span id="walletAddress">Not Connected</span></p>
         <section id="investment">
-            <h2>Invest for daily income, get income for years</h2>
-            <form id="investmentForm" onsubmit="event.preventDefault(); invest();">
-                <label for="amount">Amount (ETH):</label>
+            <h2>Invest for Daily Income</h2>
+            <form id="investmentForm">
+                <label for="amount">Amount (POL):</label>
                 <input type="number" id="amount" min="1" step="0.01" required>
-                <label for="referrer">Referrer Address:</label>
-                <input type="text" id="referrer" placeholder="Optional">
                 <button type="submit">Invest</button>
             </form>
-        </section>
-        
-        <section id="withdraw">
-            <h2>Withdraw</h2>
-            <button id="withdrawButton" onclick="withdraw();">Withdraw</button>
-        </section>
-
-        <section id="userInfo">
-            <h2>Your Info</h2>
-            <div>
-                <p>Total Deposits: <span id="totalDeposits">0</span> ETH</p>
-                <p>Total Withdrawn: <span id="totalWithdrawn">0</span> ETH</p>
-                <p>Available for Withdrawal: <span id="availableBalance">0</span> ETH</p>
-            </div>
         </section>
     </main>
     
     <footer>
         <p>&copy; 2024 Daily Polygon DApp</p>
     </footer>
+
+    <script>
+        const { createThirdwebClient, ConnectButton, ThirdwebProvider } = window.Thirdweb;
+
+        const client = createThirdwebClient({
+            clientId: "aa83552f8db8c2d86a9c06a13e113b0e", // Replace with your clientId
+        });
+
+        async function connectWallet() {
+            const wallets = [
+              createWallet("io.metamask"),
+              createWallet("com.coinbase.wallet"),
+              createWallet("me.rainbow"),
+              createWallet("com.trustwallet.app"),
+              createWallet("com.okex.wallet"),
+              createWallet("com.safepal"),
+              createWallet("pro.tokenpocket"),
+              createWallet("com.bitget.web3"),
+            ];
+
+            const connectButton = new ConnectButton({
+                client,
+                wallets,
+            });
+
+            await client.connect(wallets);
+        const signer = client.getSigner();
+        const address = await signer.getAddress();
+        document.getElementById('walletAddress').innerText = address;
+    }
+
+    document.getElementById('connectButton').onclick = connectWallet;
+
+    document.getElementById('investmentForm').onsubmit = async (e) => {
+        e.preventDefault();
+        const amount = document.getElementById('amount').value;
+
+        try {
+            const contract = await client.getContract("0x0d7A25d695952E8815f6aE99c210Dee687528679"); // Your contract address
+            const referrer = ""; // Get referrer address if needed
+
+            // Call the invest function on the smart contract
+            const tx = await contract.call("invest", referrer, {
+                value: client.utils.parseUnits(amount, 'ether') // Convert POL to wei
+            });
+            await tx.wait(); // Wait for the transaction to be mined
+            console.log(`Successfully invested ${amount} POL`);
+        } catch (error) {
+            console.error("Investment failed:", error);
+        }
+        };
+    </script>
 </body>
 </html>
