--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Daily Polygon DApp</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/@thirdweb-dev/sdk/dist/thirdweb.min.js"></script> <!-- Include Thirdweb SDK -->
-    <script src="app.js" defer></script>
+    <script src="https://unpkg.com/@thirdweb-dev/sdk/dist/thirdweb.min.js"></script> <!-- Thirdweb SDK -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline';">
 </head>
 <body>
@@ -17,7 +16,7 @@
     <main>
         <section id="investment">
             <h2>Invest for daily income, get income for years</h2>
-            <form id="investmentForm" onsubmit="return validateForm();">
+            <form id="investmentForm">
                 <label for="amount">Amount (POL):</label>
                 <input type="number" id="amount" min="1" step="0.01" required>
                 <label for="referrer">Referrer Address:</label>
@@ -51,28 +50,40 @@
     </footer>
 
     <script>
-        const { createThirdwebClient } = window.Thirdweb;
+        const { createThirdwebClient, getContract, defineChain } = window.Thirdweb;
 
+        // Create the client with your clientId
         const client = createThirdwebClient({
-            clientId: "aa83552f8db8c2d86a9c06a13e113b0e", // Replace with your clientId
+            clientId: "aa83552f8db8c2d86a9c06a13e113b0e"
+        });
+
+        // Connect to your contract
+        const contract = getContract({
+            client,
+            chain: defineChain(137), // Polygon Mainnet
+            address: "0x0d7A25d695952E8815f6aE99c210Dee687528679" // Your contract address
         });
 
         async function connectWallet() {
             const wallets = [
-              createWallet("io.metamask"),
-              createWallet("com.coinbase.wallet"),
-              createWallet("me.rainbow"),
-              createWallet("com.trustwallet.app"),
-              createWallet("com.okex.wallet"),
-              createWallet("com.safepal"),
-              createWallet("pro.tokenpocket"),
-              createWallet("com.bitget.web3"),
+                createWallet("io.metamask"),
+                createWallet("com.coinbase.wallet"),
+                createWallet("me.rainbow"),
+                createWallet("com.trustwallet.app"),
+                createWallet("com.okex.wallet"),
+                createWallet("com.safepal"),
+                createWallet("pro.tokenpocket"),
+                createWallet("com.bitget.web3"),
             ];
 
-            await client.connect(wallets);
-            const signer = client.getSigner();
-            const address = await signer.getAddress();
-            document.getElementById('walletAddress').innerText = address;
+            try {
+                await client.connect(wallets);
+                const signer = client.getSigner();
+                const address = await signer.getAddress();
+                document.getElementById('walletAddress').innerText = address;
+            } catch (error) {
+                console.error("Wallet connection failed:", error);
+            }
         }
 
         document.getElementById('connectButton').onclick = connectWallet;
@@ -82,7 +93,6 @@
             const amount = document.getElementById('amount').value;
 
             try {
-                const contract = await client.getContract("0x0d7A25d695952E8815f6aE99c210Dee687528679"); // Your contract address
                 const referrer = document.getElementById('referrer').value || ""; // Get referrer address
 
                 // Call the invest function on the smart contract
